design detail - self serv. top-level

--- a/Kiba/View/SelfService/KBASelfServContr.xib
+++ b/Kiba/View/SelfService/KBASelfServContr.xib
@@ -47,8 +47,8 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="hidden" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </activityIndicatorView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="32" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-bi-Kop">
-                    <rect key="frame" x="620" y="267" width="200" height="351"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="35" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-bi-Kop">
+                    <rect key="frame" x="633" y="284" width="200" height="250"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="NH2-MO-QKT"/>
@@ -58,12 +58,8 @@
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VXW-8c-iZJ">
-                    <rect key="frame" x="470" y="176" width="142" height="83"/>
+                    <rect key="frame" x="494" y="218" width="107" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="83" id="C5H-46-7PI"/>
-                        <constraint firstAttribute="width" constant="142" id="vjO-5x-S36"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="Kontoauszug">
                         <color key="titleColor" red="0.85882352939999995" green="0.42352941179999998" blue="0.058823529409999999" alpha="1" colorSpace="deviceRGB"/>
@@ -74,12 +70,8 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RzH-By-5M4">
-                    <rect key="frame" x="678" y="176" width="142" height="83"/>
+                    <rect key="frame" x="694" y="217" width="139" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="142" id="9In-Rs-bbX"/>
-                        <constraint firstAttribute="height" constant="83" id="Ced-xu-YWv"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="Bescheinigungen">
                         <color key="titleColor" red="0.85882352941176465" green="0.42352941176470588" blue="0.058823529411764705" alpha="1" colorSpace="deviceRGB"/>
@@ -90,16 +82,12 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jc2-nY-JlY">
-                    <rect key="frame" x="262" y="176" width="142" height="83"/>
+                    <rect key="frame" x="254" y="218" width="119" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" none="YES" button="YES" image="YES"/>
                     </accessibility>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="83" id="ea5-lg-ktY"/>
-                        <constraint firstAttribute="width" constant="142" id="i4K-jk-p9t"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="Umbuchungen">
                         <color key="titleColor" red="0.85882352939999995" green="0.42352941179999998" blue="0.058823529409999999" alpha="1" colorSpace="deviceRGB"/>
@@ -109,29 +97,29 @@
                         <action selector="changeToTransferView:" destination="-1" eventType="touchUpInside" id="JsL-W1-3jU"/>
                     </connections>
                 </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="98" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xkv-ch-zgH">
-                    <rect key="frame" x="204" y="267" width="200" height="351"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="123" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xkv-ch-zgH">
+                    <rect key="frame" x="188" y="284" width="200" height="351"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="7Pz-Ig-7Oc"/>
+                        <constraint firstAttribute="height" constant="351" id="p0i-Tc-i1E"/>
                     </constraints>
                     <connections>
                         <outlet property="dataSource" destination="IHt-Ar-9XJ" id="WpN-HI-jVE"/>
                     </connections>
                 </tableView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="120" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="v5C-FJ-aBY">
-                    <rect key="frame" x="412" y="267" width="200" height="351"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="170" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="v5C-FJ-aBY">
+                    <rect key="frame" x="430" y="284" width="165" height="351"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="200" id="rqx-gb-J9E"/>
+                        <constraint firstAttribute="width" constant="165" id="rqx-gb-J9E"/>
                     </constraints>
                     <connections>
                         <outlet property="dataSource" destination="lsi-lH-djG" id="Wbq-0E-im2"/>
                     </connections>
                 </tableView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="put in" translatesAutoresizingMaskIntoConstraints="NO" id="nJQ-Ck-JcJ">
-                    <rect key="frame" x="204" y="193" width="50" height="50"/>
+                    <rect key="frame" x="188" y="210" width="50" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="sCr-Qd-p95"/>
@@ -139,7 +127,7 @@
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="printer" translatesAutoresizingMaskIntoConstraints="NO" id="GRJ-qB-IFQ">
-                    <rect key="frame" x="412" y="193" width="50" height="50"/>
+                    <rect key="frame" x="430" y="210" width="50" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="rsj-4N-jXg"/>
@@ -147,7 +135,7 @@
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc1" translatesAutoresizingMaskIntoConstraints="NO" id="BX8-fG-G3Q">
-                    <rect key="frame" x="620" y="193" width="50" height="50"/>
+                    <rect key="frame" x="633" y="210" width="50" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="AiO-kW-Kp4"/>
@@ -168,38 +156,39 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="VXW-8c-iZJ" firstAttribute="centerY" secondItem="GRJ-qB-IFQ" secondAttribute="centerY" constant="-0.5" id="1GP-Cv-dLo"/>
                 <constraint firstItem="TrA-BV-FUy" firstAttribute="top" secondItem="fQo-AD-f5o" secondAttribute="bottom" constant="19" id="53g-jN-3mW"/>
-                <constraint firstItem="xkv-ch-zgH" firstAttribute="top" secondItem="Jc2-nY-JlY" secondAttribute="bottom" constant="8" symbolic="YES" id="6XL-OV-Ew6"/>
                 <constraint firstAttribute="trailing" secondItem="DJk-eS-jpR" secondAttribute="trailing" constant="30" id="7by-A5-vmu"/>
-                <constraint firstAttribute="bottom" secondItem="xkv-ch-zgH" secondAttribute="bottom" constant="150" id="AJk-Fp-8ah"/>
-                <constraint firstItem="VXW-8c-iZJ" firstAttribute="baseline" secondItem="RzH-By-5M4" secondAttribute="baseline" id="Bze-kE-wPw"/>
+                <constraint firstItem="VXW-8c-iZJ" firstAttribute="baseline" secondItem="RzH-By-5M4" secondAttribute="baseline" constant="1" id="Bze-kE-wPw"/>
                 <constraint firstItem="1tE-bi-Kop" firstAttribute="top" secondItem="v5C-FJ-aBY" secondAttribute="top" id="EjJ-Zf-hiZ"/>
-                <constraint firstAttribute="bottom" secondItem="1tE-bi-Kop" secondAttribute="bottom" constant="150" id="HHI-BF-jdS"/>
-                <constraint firstItem="Jc2-nY-JlY" firstAttribute="centerY" secondItem="nJQ-Ck-JcJ" secondAttribute="centerY" constant="-0.5" id="K4g-aY-Nho"/>
-                <constraint firstItem="BX8-fG-G3Q" firstAttribute="leading" secondItem="VXW-8c-iZJ" secondAttribute="trailing" constant="8" symbolic="YES" id="LjR-eh-C8S"/>
+                <constraint firstItem="xkv-ch-zgH" firstAttribute="bottom" secondItem="v5C-FJ-aBY" secondAttribute="bottom" id="LIq-Rp-eiy"/>
+                <constraint firstItem="BX8-fG-G3Q" firstAttribute="leading" secondItem="VXW-8c-iZJ" secondAttribute="trailing" constant="32" id="LjR-eh-C8S"/>
                 <constraint firstItem="v5C-FJ-aBY" firstAttribute="centerX" secondItem="TrA-BV-FUy" secondAttribute="centerX" constant="-0.5" id="LmM-Zk-ObS"/>
                 <constraint firstItem="BX8-fG-G3Q" firstAttribute="centerY" secondItem="RzH-By-5M4" secondAttribute="centerY" constant="0.5" id="MDT-HT-oqZ"/>
                 <constraint firstItem="wva-gp-6nP" firstAttribute="top" secondItem="fQo-AD-f5o" secondAttribute="bottom" constant="26" id="NiI-yQ-u9z"/>
-                <constraint firstItem="VXW-8c-iZJ" firstAttribute="leading" secondItem="GRJ-qB-IFQ" secondAttribute="trailing" constant="8" symbolic="YES" id="Pm2-5C-yK3"/>
+                <constraint firstItem="GRJ-qB-IFQ" firstAttribute="centerY" secondItem="VXW-8c-iZJ" secondAttribute="centerY" id="PAy-7x-sGl"/>
+                <constraint firstItem="VXW-8c-iZJ" firstAttribute="leading" secondItem="GRJ-qB-IFQ" secondAttribute="trailing" constant="14" id="Pm2-5C-yK3"/>
+                <constraint firstItem="v5C-FJ-aBY" firstAttribute="bottom" secondItem="1tE-bi-Kop" secondAttribute="bottom" constant="101" id="Q1x-cL-CQ1"/>
                 <constraint firstItem="v5C-FJ-aBY" firstAttribute="top" secondItem="xkv-ch-zgH" secondAttribute="top" id="QgV-TT-rie"/>
-                <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="nJQ-Ck-JcJ" secondAttribute="trailing" constant="8" symbolic="YES" id="SDI-ml-Esk"/>
-                <constraint firstAttribute="bottom" secondItem="v5C-FJ-aBY" secondAttribute="bottom" constant="150" id="Xih-sT-yrC"/>
-                <constraint firstItem="RzH-By-5M4" firstAttribute="leading" secondItem="BX8-fG-G3Q" secondAttribute="trailing" constant="8" symbolic="YES" id="Yli-wc-fUj"/>
-                <constraint firstItem="GRJ-qB-IFQ" firstAttribute="leading" secondItem="Jc2-nY-JlY" secondAttribute="trailing" constant="8" symbolic="YES" id="ar5-y5-XbU"/>
+                <constraint firstItem="v5C-FJ-aBY" firstAttribute="bottom" secondItem="xkv-ch-zgH" secondAttribute="bottom" id="Vza-l8-sfV"/>
+                <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="nJQ-Ck-JcJ" secondAttribute="trailing" constant="16" id="Wos-hd-kCb"/>
+                <constraint firstItem="xkv-ch-zgH" firstAttribute="top" secondItem="nJQ-Ck-JcJ" secondAttribute="bottom" constant="24" id="XFf-9O-7tR"/>
+                <constraint firstItem="nJQ-Ck-JcJ" firstAttribute="top" secondItem="2" secondAttribute="top" constant="210" id="XMA-2T-Pf5"/>
+                <constraint firstItem="RzH-By-5M4" firstAttribute="leading" secondItem="BX8-fG-G3Q" secondAttribute="trailing" constant="11" id="Yli-wc-fUj"/>
+                <constraint firstItem="GRJ-qB-IFQ" firstAttribute="leading" secondItem="Jc2-nY-JlY" secondAttribute="trailing" constant="57" id="ar5-y5-XbU"/>
                 <constraint firstItem="wva-gp-6nP" firstAttribute="leading" secondItem="TrA-BV-FUy" secondAttribute="trailing" constant="13" id="bor-mQ-nQp"/>
+                <constraint firstItem="GRJ-qB-IFQ" firstAttribute="top" secondItem="BX8-fG-G3Q" secondAttribute="top" id="cui-6q-ZCc"/>
                 <constraint firstAttribute="bottom" secondItem="DJk-eS-jpR" secondAttribute="bottom" constant="30" id="fJK-GY-GaC"/>
                 <constraint firstAttribute="centerX" secondItem="fQo-AD-f5o" secondAttribute="centerX" constant="-0.5" id="gYP-cF-eQo"/>
                 <constraint firstItem="xkv-ch-zgH" firstAttribute="leading" secondItem="nJQ-Ck-JcJ" secondAttribute="leading" id="gsS-8E-q00"/>
                 <constraint firstAttribute="centerX" secondItem="TrA-BV-FUy" secondAttribute="centerX" constant="-0.5" id="hbc-la-kjq"/>
                 <constraint firstItem="1tE-bi-Kop" firstAttribute="leading" secondItem="BX8-fG-G3Q" secondAttribute="leading" id="hk2-Sg-2IT"/>
-                <constraint firstItem="VXW-8c-iZJ" firstAttribute="baseline" secondItem="Jc2-nY-JlY" secondAttribute="baseline" id="in6-X1-aBO"/>
+                <constraint firstItem="GRJ-qB-IFQ" firstAttribute="top" secondItem="nJQ-Ck-JcJ" secondAttribute="top" id="k2v-aN-76M"/>
                 <constraint firstItem="1tE-bi-Kop" firstAttribute="top" secondItem="xkv-ch-zgH" secondAttribute="top" id="noK-tS-pe2"/>
-                <constraint firstItem="v5C-FJ-aBY" firstAttribute="trailing" secondItem="VXW-8c-iZJ" secondAttribute="trailing" id="ny1-iA-YTp"/>
-                <constraint firstItem="VXW-8c-iZJ" firstAttribute="top" secondItem="TrA-BV-FUy" secondAttribute="bottom" constant="8" symbolic="YES" id="uEw-5q-1nt"/>
+                <constraint firstItem="v5C-FJ-aBY" firstAttribute="trailing" secondItem="VXW-8c-iZJ" secondAttribute="trailing" constant="-6" id="ny1-iA-YTp"/>
                 <constraint firstItem="fQo-AD-f5o" firstAttribute="top" secondItem="2" secondAttribute="top" constant="90" id="uGG-g8-ety"/>
                 <constraint firstItem="v5C-FJ-aBY" firstAttribute="leading" secondItem="GRJ-qB-IFQ" secondAttribute="leading" id="w9w-Qi-81N"/>
-                <constraint firstItem="1tE-bi-Kop" firstAttribute="top" secondItem="RzH-By-5M4" secondAttribute="bottom" constant="8" id="zSd-tB-Inv"/>
+                <constraint firstItem="Jc2-nY-JlY" firstAttribute="centerY" secondItem="nJQ-Ck-JcJ" secondAttribute="centerY" id="xaD-oR-qky"/>
+                <constraint firstItem="1tE-bi-Kop" firstAttribute="top" secondItem="RzH-By-5M4" secondAttribute="bottom" constant="33" id="zSd-tB-Inv"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
