--- a/Kiba/View/Finder/KBABranchController.xib
+++ b/Kiba/View/Finder/KBABranchController.xib
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KBABranchController">
             <connections>
                 <outlet property="appointmentView" destination="gx2-lR-cHw" id="OXg-bb-Asf"/>
+                <outlet property="bottomConstraint" destination="VVc-Vt-QH9" id="whD-BQ-wlI"/>
                 <outlet property="branchLabel" destination="V7X-y3-2w6" id="vVG-pF-QJS"/>
                 <outlet property="contactImage" destination="kqK-pX-ysd" id="R0I-fh-diq"/>
                 <outlet property="contactPersonLabel" destination="cyL-sQ-CiQ" id="7xk-pv-gBh"/>
@@ -40,33 +41,41 @@
                     <color key="textColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dbB-PX-3Fm" userLabel="Content">
-                    <rect key="frame" x="40" y="617" width="688" height="235"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dbB-PX-3Fm" userLabel="Content">
+                    <rect key="frame" x="40" y="617" width="688" height="208"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="__öffnungszeiten__" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="260" translatesAutoresizingMaskIntoConstraints="NO" id="BJp-yH-aKM">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="__öffnungszeiten__" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="260" translatesAutoresizingMaskIntoConstraints="NO" id="BJp-yH-aKM">
                             <rect key="frame" x="7" y="41" width="260" height="120"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="120" id="mhp-UD-Dd9"/>
+                                <constraint firstAttribute="width" constant="260" id="oma-qO-xq5"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="19"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kqK-pX-ysd" userLabel="AnsprechpartnerBild">
-                            <rect key="frame" x="383" y="46" width="240" height="128"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kqK-pX-ysd" userLabel="AnsprechpartnerBild">
+                            <rect key="frame" x="383" y="49" width="240" height="128"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="128" id="N08-0o-00O"/>
+                                <constraint firstAttribute="width" constant="240" id="eE6-AV-8pp"/>
+                            </constraints>
                         </imageView>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ihr Ansprechpartner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jSO-o3-3Yf">
-                            <rect key="frame" x="383" y="5" width="184" height="21"/>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ihr Ansprechpartner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jSO-o3-3Yf">
+                            <rect key="frame" x="383" y="-2" width="184" height="26"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="21"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="__ansprechpartner__" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyL-sQ-CiQ">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="__ansprechpartner__" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyL-sQ-CiQ">
                             <rect key="frame" x="383" y="185" width="176" height="23"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="19"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Öffnungszeiten" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jb9-qJ-3kZ">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Öffnungszeiten" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jb9-qJ-3kZ">
                             <rect key="frame" x="7" y="0.0" width="140" height="26"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="21"/>
@@ -74,6 +83,20 @@
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="cyL-sQ-CiQ" firstAttribute="top" secondItem="kqK-pX-ysd" secondAttribute="bottom" constant="8" id="5ey-bb-7VX"/>
+                        <constraint firstItem="jSO-o3-3Yf" firstAttribute="top" secondItem="dbB-PX-3Fm" secondAttribute="top" constant="-2" id="HIq-Gh-xq2"/>
+                        <constraint firstItem="kqK-pX-ysd" firstAttribute="leading" secondItem="jSO-o3-3Yf" secondAttribute="leading" id="J27-Hk-MLt"/>
+                        <constraint firstItem="kqK-pX-ysd" firstAttribute="top" secondItem="jSO-o3-3Yf" secondAttribute="bottom" constant="25" id="Kib-aw-1Ci"/>
+                        <constraint firstItem="Jb9-qJ-3kZ" firstAttribute="leading" secondItem="dbB-PX-3Fm" secondAttribute="leading" constant="7" id="bsf-0k-v9d"/>
+                        <constraint firstItem="BJp-yH-aKM" firstAttribute="top" secondItem="Jb9-qJ-3kZ" secondAttribute="bottom" constant="15" id="eDE-Wi-q7D"/>
+                        <constraint firstItem="Jb9-qJ-3kZ" firstAttribute="leading" secondItem="BJp-yH-aKM" secondAttribute="leading" id="gMr-aO-ISw"/>
+                        <constraint firstAttribute="bottom" secondItem="BJp-yH-aKM" secondAttribute="bottom" constant="47" id="k7D-I6-TE4"/>
+                        <constraint firstAttribute="trailing" secondItem="kqK-pX-ysd" secondAttribute="trailing" constant="65" id="kH2-EQ-t4s"/>
+                        <constraint firstItem="kqK-pX-ysd" firstAttribute="leading" secondItem="cyL-sQ-CiQ" secondAttribute="leading" id="sVN-Ql-mBx"/>
+                        <constraint firstItem="Jb9-qJ-3kZ" firstAttribute="top" secondItem="dbB-PX-3Fm" secondAttribute="top" id="uTk-XN-CGS"/>
+                        <constraint firstItem="jSO-o3-3Yf" firstAttribute="leading" secondItem="Jb9-qJ-3kZ" secondAttribute="trailing" constant="236" id="yST-PP-kjz"/>
+                    </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BranchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Gui-QF-PqB" userLabel="BranchIcon">
                     <rect key="frame" x="623" y="321" width="32" height="32"/>
@@ -88,7 +111,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YnV-6i-XYb">
-                            <rect key="frame" x="51" y="98" width="91" height="34"/>
+                            <rect key="frame" x="51" y="99" width="91" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <state key="normal" title="Navigation">
@@ -175,7 +198,8 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="dbB-PX-3Fm" secondAttribute="bottom" constant="172" id="BcZ-Ck-mbv"/>
+                <constraint firstItem="dbB-PX-3Fm" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="40" id="JSu-fv-eFr"/>
+                <constraint firstAttribute="bottom" secondItem="dbB-PX-3Fm" secondAttribute="bottom" constant="199" id="VVc-Vt-QH9"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
