--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -1,17 +1,12 @@
-body {
-    background-image: -webkit-linear-gradient(top, #8bada3 0%, #3b6670 100%);
-}
-
 .align-center {
     text-align: center;
 }
 
 h1 {
     font-weight: 200;
-    font-size: 48pt;
-    font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-size: 22pt;
+    font-family: 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     text-align: center;
-    color: white;
 }
 
 h3 {
@@ -27,10 +22,10 @@ img.kiba {
 }
 
 .chart {
-    width: 180px;
-    height: 180px;
-    margin: 20px auto;
-    position: relative;
+    /*width: 180px;*/
+    height: 360px;
+    /*margin: 20px auto;*/
+    /*position: relative;*/
 }
 
 .chart-label {
